samples/_failures_safe/1761596035_1e6420_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0804dd26.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_0804dd26.c:177:5: error: expected declaration or statement at end of input
  177 |     }
      |     ^
